tests/extended/valid/ListAppend_Valid_2.whiley
void System::main([string] args):
    left = [1,2]
    right = [3,4]
    r = left + right
    out->println(str(r))
