tests/extended/invalid/simple/If_CompileFail_3.whiley
void f(bool z):
     if(z):
          for z in [1,2,3]:
            print str(z)
